--- a/src/app/admin/components/roles/role-create/role-create.component.html
+++ b/src/app/admin/components/roles/role-create/role-create.component.html
@@ -1,1 +1,15 @@
-<p>role-create works!</p>
+<div class="role-create-container">
+    <mat-card>
+      <mat-card-title>Role Create</mat-card-title>
+      <mat-card-content>
+        <form [formGroup]="roleForm" (ngSubmit)="onSubmit()">
+          <mat-form-field appearance="fill">
+            <mat-label>Role Name</mat-label>
+            <input matInput formControlName="name" required>
+            <mat-error *ngIf="roleForm.get('name').hasError('required')">Brand name is required</mat-error>
+          </mat-form-field>
+          <button mat-raised-button color="primary" type="submit">Create Role</button>
+        </form>
+      </mat-card-content>
+    </mat-card>
+  </div>
