--- a/src/app/ui/components/navbar/navbar.component.scss
+++ b/src/app/ui/components/navbar/navbar.component.scss
@@ -1,7 +1,7 @@
 .industrial-navbar {
   font-family: Arial, sans-serif;
   font-size: 14px;
-  position: relative;
+  position: static;
   z-index: 1000;
 
   .top-bar {
@@ -212,8 +212,8 @@
   }
 
   .dropdown-overlay {
-    position: fixed; // absolute yerine fixed kullanıyoruz
-    top: 155px; // Navbar'ın yüksekliği kadar
+    position: absolute; // absolute yerine fixed kullanıyoruz
+    top: 154px;
     left: 0;
     right: 0;
     bottom: 0; // Ekranın altına kadar uzansın
