--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,14 +5,15 @@
 }
 
 .mat-typography{
-  background: rgb(248, 250, 252);
+  background: white;
+  //background: rgb(248, 250, 252);
   
 }
 .app-container {
-  background: rgb(248, 250, 252);
+  background: white;
 }
 .app-layout {
-  background: rgb(248, 250, 252);
+  background: white;
 }
 
 .edit-button-list {
