--- a/src/app/ui/components/home/home.component.scss
+++ b/src/app/ui/components/home/home.component.scss
@@ -19,10 +19,12 @@ body {
 }
 
 .container {
+  max-width: 1320px;
+  margin: auto;
   display: flex;
   overflow-x: auto;
   gap: 20px;
-  padding: 40px 0;
+  padding: 20px 0;
   scroll-snap-type: x mandatory;
   -webkit-overflow-scrolling: touch;
   scrollbar-width: thin;
@@ -64,13 +66,10 @@ body {
   
   .hero-carousel {
     position: relative;
-    width: 100%;
-    height: 400px;
-    overflow: hidden;
-    background-color: $secondary-color;
+    height: 450px;
+    background-color: #1e1e1e;
   
     .carousel-container {
-      width: 100%;
       height: 100%;
       position: relative;
     }
@@ -78,67 +77,78 @@ body {
     .carousel-slide {
       position: absolute;
       top: 0;
-      left: 0;
       width: 100%;
       height: 100%;
       opacity: 0;
-      transition: opacity 0.5s ease-in-out;
+      transition: opacity 0.8s ease;
   
       &.active {
         opacity: 1;
       }
   
       .slide-content {
-        display: flex;
+        position: relative;
         height: 100%;
-        padding: 0 5%;
-      }
-  
-      .text-content {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding-right: 5%;
-      }
-  
-      .image-content {
-        flex: 1;
         display: flex;
         align-items: center;
         justify-content: center;
+        padding: 0 5%;
   
-        img {
-          max-width: 100%;
-          max-height: 100%;
-          object-fit: contain;
+        .overlay {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: rgba(0, 0, 0, 0.4);
         }
-      }
   
-      .slide-title {
-        font-size: 3rem;
-        font-weight: 700;
-        color: $primary-color;
-        margin-bottom: 1rem;
-      }
+        .text-content {
+          z-index: 2;
+          color: #fff;
+          text-align: center;
+          position: absolute; // Absolute konumlandırma ile sabitle
+    top: 50%; // Yatayda ortala
+    left: 15%; // Soldan uzaklık
+    transform: translateY(-50%); // Dikeyde tam ortalamak için translate kullan
+    flex: 1;
+    z-index: 1; // Metnin görüntünün üstünde kalmasını sağla
+          
   
-      .slide-description {
-        font-size: 1.2rem;
-        margin-bottom: 2rem;
-      }
+          .slide-title {
+            font-size: 2.5rem;
+            font-weight: bold;
+            margin-bottom: 1rem;
+          }
   
-      .btn-cta {
-        display: inline-block;
-        padding: 12px 30px;
-        background-color: $accent-color;
-        color: $light-text;
-        text-decoration: none;
-        font-weight: 500;
-        border-radius: 5px;
-        transition: background-color 0.3s;
+          .slide-description {
+            font-size: 1.2rem;
+            margin-bottom: 2rem;
+          }
   
-        &:hover {
-          background-color: darken($accent-color, 10%);
+          .btn-cta {
+            padding: 12px 30px;
+            background-color: #fcb900;
+            color: #000;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+  
+            &:hover {
+              background-color: #e0a700;
+            }
+          }
+        }
+  
+        .image-content {
+          position: relative;
+          left: 15%;
+          img {
+            height: 450px;
+            object-fit: cover;
+            mask-image: linear-gradient(to right, transparent 0%, white 30%, white 60%, transparent 100%);
+            -webkit-mask-image: linear-gradient(to right, transparent 0%, white 30%, white 60%, transparent 100%);
+          }
         }
       }
     }
@@ -147,9 +157,7 @@ body {
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
-      background-color: rgba($primary-color, 0.5);
-      color: $light-text;
-      border: none;
+      background-color: rgba(0, 0, 0, 0.5);
       width: 50px;
       height: 50px;
       border-radius: 50%;
@@ -160,12 +168,7 @@ body {
       transition: background-color 0.3s;
   
       &:hover {
-        background-color: rgba($primary-color, 0.8);
-      }
-  
-      svg {
-        width: 24px;
-        height: 24px;
+        background-color: rgba(0, 0, 0, 0.7);
       }
   
       &.prev {
@@ -174,6 +177,10 @@ body {
   
       &.next {
         right: 20px;
+      }
+  
+      svg {
+        stroke: #fff;
       }
     }
   
@@ -188,20 +195,20 @@ body {
       span {
         width: 12px;
         height: 12px;
-        background-color: rgba($primary-color, 0.5);
+        background-color: #555;
         border-radius: 50%;
         cursor: pointer;
-        transition: background-color 0.3s;
   
-        &.active, &:hover {
-          background-color: $primary-color;
+        &.active {
+          background-color: #fcb900;
         }
       }
     }
   }
   
+  
   .categories {
-    padding: 60px 0;
+    padding: 20px 0;
     background-color: $light-text;
   
     .section-title {
@@ -214,12 +221,13 @@ body {
     .category-grid {
       display: flex;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 30px;
+      gap: 1rem;
     }
   
     .category-card {
       background-color: $secondary-color;
-      width: 250px;
+      width: 205px;
+      height: 300px;
       border-radius: 10px;
       overflow: hidden;
       transition: transform 0.3s, box-shadow 0.3s;
@@ -242,20 +250,26 @@ body {
       }
   
       .category-content {
-        padding: 20px;
+        padding: 10px;
         text-align: center;
       }
   
       .category-title {
-        font-size: 1.2rem;
+        margin-top: 20px;
+        line-height: normal;
+        font-size: 1rem;
+        font-weight: bold;
         color: $primary-color;
         margin-bottom: 10px;
       }
   
       .category-description {
-        width: max-content;
+        line-height: normal;
+        margin-top: 20px;
+        width: 200px;
+        height: 50px;
         font-size: 0.9rem;
-        margin-bottom: 15px;
+        //margin-bottom: 15px;
       }
   
       .btn-category {
@@ -273,38 +287,67 @@ body {
       }
     }
   }
-  
-  
+    
   @media (max-width: 768px) {
     .hero-carousel {
-      height: 500px;
-  
-      .carousel-slide {
-        .slide-content {
-          flex-direction: column;
-          text-align: center;
-        }
-  
-        .text-content {
-          padding-right: 0;
-          padding-bottom: 20px;
-        }
-  
-        .slide-title {
-          font-size: 2rem;
-        }
-  
-        .slide-description {
-          font-size: 1rem;
-        }
-      }
+      display: none;
     }
   
     .categories {
+      .category-place{
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: baseline;
+        flex-direction: column;
+        font-size: 20px;
+        font-weight: bold;
+
+        &::after { // Eklendi
+          content: '';
+          position: absolute;
+          bottom: -10px; // Yazının altında 8px boşluk bırakır
+          left: 0;
+          width: 100px;
+          height: 4px;
+          background-image: linear-gradient(to bottom, rgba(12, 108, 212, 0), rgba(35, 41, 50, .15) 37%), linear-gradient(to bottom, #0066cc, #0066cc);
+        }
+      }
       .category-grid {
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       }
-    }
+
+      .category-card {
+        background-color: $secondary-color;
+        width: 110px;
+        height: 200px;
+        border-radius: 5px;
+        overflow: hidden;
+        transition: transform 0.3s, box-shadow 0.3s;
+
+        .category-image {
+          margin-top: 10px;
+          height: 100px;
+          overflow: hidden;
+    
+          img {
+            
+            object-fit:none;
+          }
+        }
+        .category-title{
+          margin-top: 20px;
+          line-height: normal;
+        }
+        .category-description{
+          display: none;
+          
+        }
+        .btn-category{
+          display: none;
+        }
+      }
+  }
   }
 .downbar-container {
   display: flex;
