--- a/src/app/ui/components/home/home.component.html
+++ b/src/app/ui/components/home/home.component.html
@@ -36,10 +36,11 @@
 
 <!-- Categories Section -->
 
+
 <section class="categories">
   <div class="category-place" *ngIf="isMobile">KATEGORİLER</div>
   <div class="container">
-    <button class="scroll-btn left" (click)="scrollLeft()">
+    <button class="scroll-btn left" (click)="scrollLeft()" *ngIf="!isMobile">
       <!-- Sol ok ikonu -->
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="15 18 9 12 15 6"></polyline></svg>
     </button>
@@ -57,7 +58,7 @@
       </div>
     </div>
 
-    <button class="scroll-btn right" (click)="scrollRight()">
+    <button class="scroll-btn right" (click)="scrollRight()" *ngIf="!isMobile">
       <!-- Sağ ok ikonu -->
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="9 18 15 12 9 6"></polyline></svg>
     </button>
