--- a/src/app/ui/components/navbar/navbar.component.scss
+++ b/src/app/ui/components/navbar/navbar.component.scss
@@ -83,7 +83,7 @@
         border: 1px solid #ddd;
         box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         z-index: 1000;
-        max-height: 400px;
+        max-height: 900px;
         max-width: 700px;
         overflow-y: auto;
 
@@ -375,6 +375,7 @@
           display: grid;
           grid-template-columns: repeat(2, 1fr);
           gap: 20px;
+          margin-bottom: 10px;
 
           .product-item {
             background-color: white;
