--- a/src/app/ui/components/filter/filter.component.html
+++ b/src/app/ui/components/filter/filter.component.html
@@ -1,17 +1,42 @@
 <div class="filter-container">
-    <h3>Filtreler</h3>
-    <div *ngFor="let filter of filters | keyvalue">
-      <h4>{{ filter.key }}</h4>
-      <ul>
-        <li *ngFor="let option of filter.value">
-          <label>
-            <input type="checkbox" 
-                   [checked]="isSelected(filter.key, option)"
-                   (change)="toggleFilter(filter.key, option)">
-            {{ option }}
-          </label>
-        </li>
-      </ul>
+  <h2>Filtreler</h2>
+  <div class="filter-groups-container">
+    <div *ngFor="let filter of availableFilters" class="filter-group">
+      <h3>{{ filter.displayName }}</h3>
+      
+      <ng-container [ngSwitch]="filter.type">
+        <ng-container *ngSwitchCase="FilterType.Checkbox">
+          <div class="checkbox-group scrollable">
+            <label *ngFor="let option of filter.options" class="checkbox-label">
+              <input type="checkbox" 
+                     [checked]="isSelected(filter.key, option.value)"
+                     (change)="toggleFilter(filter.key, option.value)">
+              <span class="checkbox-text">{{ option.value }}</span>
+            </label>
+          </div>
+        </ng-container>
+
+        <ng-container *ngSwitchCase="FilterType.Range">
+          <div *ngIf="filter.key === 'Price'" class="price-filter">
+            <div class="custom-range">
+              <input type="number" [(ngModel)]="customPriceRange.min" placeholder="En az" class="price-input">
+              <input type="number" [(ngModel)]="customPriceRange.max" placeholder="En çok" class="price-input">
+              <button (click)="applyCustomPriceRange()" class="apply-button">
+                <svg _ngcontent-ng-c1535584232="" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" class="bi bi-search"><path _ngcontent-ng-c1535584232="" d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"></path></svg>
+              </button>
+            </div>
+            <div class="predefined-ranges scrollable">
+              <label *ngFor="let option of filter.options" class="checkbox-label">
+                <input type="radio" 
+                       [checked]="isSelected(filter.key, option.value)"
+                       (change)="toggleFilter(filter.key, option.value)"
+                       [name]="filter.key">
+                <span class="checkbox-text">{{ option.value }}</span>
+              </label>
+            </div>
+          </div>
+        </ng-container>
+      </ng-container>
     </div>
-    <button (click)="applyFilters()">Filtreleri Uygula</button>
   </div>
+</div>
