--- a/src/app/ui/components/search-results/search-results.component.scss
+++ b/src/app/ui/components/search-results/search-results.component.scss
@@ -23,10 +23,10 @@ $hover-color: rgba($primary-color, 0.1);
 
   .search-content {
     display: flex;
-    gap: 2rem;
+    gap: 1rem;
 
     app-filter {
-      flex: 0 0 250px;
+      flex: 0 0 245px;
     }
 
     .results-area {
@@ -90,16 +90,28 @@ $hover-color: rgba($primary-color, 0.1);
         flex-grow: 1;
 
         .name-title {
-          .product-name {
-            font-size: 0.9rem;
+          .brand-name {
+            margin: 0 0 0 0;
+            color: $primary-color;
             font-weight: bold;
-            margin-bottom: 0.2rem;
-            color: $text-color;
+            text-decoration: none;
           }
-          .product-title {
-            font-size: 0.8rem;
-            color: lighten($text-color, 20%);
-            margin-bottom: 0.2rem;
+          .product-names {
+            display: flex;
+            flex-direction: row;
+            align-items: baseline;
+
+            .product-name {
+              font-size: 0.9rem;
+              font-weight: bold;
+              margin-bottom: 0.2rem;
+              color: $text-color;
+            }
+            .product-title {
+              font-size: 0.9rem;
+              color: lighten($text-color, 20%);
+              margin-left: 5px;
+            }
           }
         }
 
@@ -145,10 +157,33 @@ $hover-color: rgba($primary-color, 0.1);
       }
     }
   }
-  
 }
 
 mat-paginator {
   margin-top: 1rem;
   background-color: $background-color;
+}
+
+.search-results-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.sort-dropdown {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-bottom: 15px;
+}
+
+.sort-dropdown label {
+  margin-right: 10px;
+}
+
+.sort-dropdown select {
+  padding: 5px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
 }
